Some endpoint bug fix
