# docs/swagger.json
@@ -305,9 +305,9 @@
                 }
             }
         },
-        "/trader/{traderWallet}": {
+        "/trader/{poolAddress}/info": {
             "get": {
-                "description": "Get Trader Info",
+                "description": "Get Trader/Pool info",
                 "consumes": [
                     "application/json"
                 ],
@@ -317,12 +317,12 @@
                 "tags": [
                     "Trader"
                 ],
-                "summary": "Get Trader Info",
+                "summary": "Get Trader/Pool info",
                 "parameters": [
                     {
                         "type": "string",
-                        "description": "Trader wallet address",
-                        "name": "traderWallet",
+                        "description": "Pool address",
+                        "name": "poolAddress",
                         "in": "path",
                         "required": true
                     }
@@ -339,7 +339,7 @@
                                     "type": "object",
                                     "properties": {
                                         "data": {
-                                            "$ref": "#/definitions/service_routes.TraderInfoResponse"
+                                            "$ref": "#/definitions/service_routes.PoolInfoResponse"
                                         }
                                     }
                                 }
@@ -850,7 +850,7 @@
                 }
             }
         },
-        "service_routes.TraderInfoResponse": {
+        "service_routes.PoolInfoResponse": {
             "type": "object",
             "properties": {
                 "copiers": {
