# internal/services/routes/trader.go
@@ -13,58 +13,45 @@ type TraderRoutes struct {
 	Context *RoutesContext
 }
 
-type TraderInfoResponse struct {
-	Fund int64 `json:"fund"`
+type PoolInfoResponse struct {
+	Fund    int64   `json:"fund"`
 	Copiers float64 `json:"copiers"`
 }
 
-// @Description Get Trader Info
-// @Summary Get Trader Info
+// @Description Get Trader/Pool info
+// @Summary Get Trader/Pool info
 // @Tags Trader
 // @Accept  json
 // @Produce  json
-// @Param traderWallet path string true "Trader wallet address"
-// @Success 200 {object} response.S{data=TraderInfoResponse}
+// @Param poolAddress path string true "Pool address"
+// @Success 200 {object} response.S{data=PoolInfoResponse}
 // @Failure 400 {object} response.E
-// @Router /trader/{traderWallet} [get]
-func (p *TraderRoutes) GetTraderInfo(c *gin.Context) {
-	if helpers.IsValidAddress(c.Param("traderWallet")) == false {
+// @Router /trader/{poolAddress}/info [get]
+func (p *TraderRoutes) GetPoolInfo(c *gin.Context) {
+	if helpers.IsValidAddress(c.Param("poolAddress")) == false {
 		response.Error(c, http.StatusBadRequest, response.E{
 			Code:    response.InvalidJSONBody,
-			Message: "invalid traderWallet address",
+			Message: "invalid pool Address",
 		})
 		return
 	}
 
-	result := &TraderInfoResponse{}
+	result := &PoolInfoResponse{}
 
-	traderWallet := c.Param("traderWallet")
-	var allTraderPools []models.Pool
-	if err := p.Context.st.DB.Find(&allTraderPools, "LOWER(\"creatorAdr\") = LOWER(?)", traderWallet).
+	poolAddress := c.Param("poolAddress")
+	var foundPool models.Pool
+	if err := p.Context.st.DB.First(&foundPool, "LOWER(\"poolAdr\") = LOWER(?)", poolAddress).
 		Error; err != nil {
 		response.Error(c, http.StatusBadRequest, response.E{
 			Code:    response.InvalidRequest,
-			Message: "Pools DB request error",
+			Message: "Pool not found",
 		})
 		return
-	}
-
-	if len(allTraderPools) <= 0 {
-		response.Error(c, http.StatusAccepted, response.E{
-			Code:    response.InvalidRequest,
-			Message: "Trader pools not exist",
-		})
-		return
-	}
-
-	poolsAdrList := []string{}
-	for _, pool := range allTraderPools {
-		poolsAdrList = append(poolsAdrList, pool.PoolAdr)
 	}
 
 	var investorsCount int64
 	if err := p.Context.st.DB.Model(&models.PoolTransfer{}).Distinct("\"wallet\"").
-		Where("\"poolAdr\" IN ?", poolsAdrList).Count(&investorsCount).
+		Where("\"poolAdr\" = ?", foundPool.PoolAdr).Count(&investorsCount).
 		Error; err != nil {
 		response.Error(c, http.StatusBadRequest, response.E{
 			Code:    response.InvalidRequest,
@@ -76,7 +63,7 @@ func (p *TraderRoutes) GetTraderInfo(c *gin.Context) {
 
 	var investorsLast24hCount int64
 	if err := p.Context.st.DB.Model(&models.PoolTransfer{}).Distinct("\"wallet\"").
-		Where("\"poolAdr\" IN ? AND \"createdAt\" >= ?", poolsAdrList, time.Now().AddDate(0, 0, -1)).Count(&investorsLast24hCount).
+		Where("\"poolAdr\" = ? AND \"date\" >= ?", foundPool.PoolAdr, time.Now().AddDate(0, 0, -1)).Count(&investorsLast24hCount).
 		Error; err != nil {
 		response.Error(c, http.StatusBadRequest, response.E{
 			Code:    response.InvalidRequest,
@@ -84,7 +71,11 @@ func (p *TraderRoutes) GetTraderInfo(c *gin.Context) {
 		})
 		return
 	}
-	result.Copiers = float64(investorsCount) / float64(investorsLast24hCount) * 100
+	if investorsCount == 0 || investorsLast24hCount == 0 {
+		result.Copiers = 0
+	} else {
+		result.Copiers = float64(investorsLast24hCount) / float64(investorsCount) * 100
+	}
 
 	response.Success(c, http.StatusOK, response.S{Data: result})
 
